--- a/Backend/templates/index.html
+++ b/Backend/templates/index.html
@@ -3,6 +3,11 @@
 {% block content %}
     <div>
       <div class="container">
+      <div class="row">
+        <div class="col-6">
+      <a href="/stats"><button type="submit" class="btn btn-success">See Stats</button></a>
+        </div></div></div>
+      <div class="container">
         <form action="#" method="post">
           <div class="row">
             <div class="col-6">
@@ -48,6 +53,7 @@
           </div>
           <button type="submit" class="btn btn-success">Submit</button>
         </form>
+        
       </div>
       <br>
       
